--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ h2 img{
 }
 
 .row input{
+    width: 100%;
     flex: 1;
     border: none;
     outline: none;
@@ -111,3 +112,13 @@ ul li span:hover{
     background: #edeef0;
 }
 
+@media screen and (max-width: 540px){
+    .container{
+        width: 100%;
+        padding: 12px 10px;
+    }
+    body{
+        padding: 0 30px;
+    }
+    
+}
